##################################################
 Revision history for Log::Log4perl
##################################################

0.45 (not yet released)
    * (ms) fix for t/045Composite.t on perl 5.6.1 by Jeff Macdonald 
           <jeff.macdonald@e-dialog.com> (specify number of test cases,
           getting rid of no_plan).

0.44 (04/25/2004)
    * (ms) added filename() method to L4P::Appender::File as suggested 
           by Lee Carmichael <lecar_red@yahoo.com>
    * (ms) added RRDs appender Log::Log4perl::Appender::RRDs and testcases
    * (ms) fixed Log::Log4perl::Appender to check if a an appender package
           has already been loaded and skip 'require' in this case. 
           Packages injected via Class::Prototyped caused an error with this.
    * (ms) Extended the FAQ's "How can I write my own appender?" on
           how to dynamically create new appenders via Class::Prototyped.

0.43 (03/22/2004)
    * (ms) Applied patch by Markus Peter <warp@spin.de> for 'pipe'
           mode in Log::Log4perl::Appender::File
    * (ms) Added composite appender Log::Log4perl::Appender::Limit to
           limit message delivery to adjustable time windows.
    * (ms) Fixed last 033UsrCspec.t test case to run on Win32 as well
           (path fixed).
    * (ms) Lars Thegler <lars@thegler.dk> provided a patch to keep 
           compatibility with 5.005_03.
    * (ms) Added a patch to avoid warnings on undefined MDC values referenced
           via %X in PatternLayout. Now, the string "[undef]" is used. Bug
           was reported by Ritu Kohli <Ritu.Kohli@ubs.com>

0.42 (02/14/2004)
    * (kg) added filters to XML DOMConfig and DTD
    * (ms) Fixed caller level to cspecs by adding one
    * (ms) Added init_once() and documentation
    * (ms) Worked around the perl bug that triggers __DIE__ handlers
           even if die() occurs within an eval(). So if you did
             BEGIN { $SIG{__DIE__} = sub { print "ouch!"; die }; }